--- a/your-code/challenge-3.ipynb
+++ b/your-code/challenge-3.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -197,14 +197,14 @@
        "4       3.39       17850  United Kingdom         20.34  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# enter your code here\n",
-    "orders = pd.read_csv(\"../../lab-subsetting-and-descriptive-stats/your-code/Orders.csv\")\n",
+    "orders = pd.read_csv(\"Orders.csv\")\n",
     "orders.head()"
    ]
   },
@@ -238,11 +238,259 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>amount_spent</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12346</th>\n",
+       "      <td>77183.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12347</th>\n",
+       "      <td>4310.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12348</th>\n",
+       "      <td>1797.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12349</th>\n",
+       "      <td>1757.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12350</th>\n",
+       "      <td>334.40</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            amount_spent\n",
+       "CustomerID              \n",
+       "12346           77183.60\n",
+       "12347            4310.00\n",
+       "12348            1797.24\n",
+       "12349            1757.55\n",
+       "12350             334.40"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "spenses = orders[['CustomerID', 'amount_spent']].groupby('CustomerID').sum()\n",
+    "spenses.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1661.6400000000003"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spenses.quantile([.75,.95])['amount_spent'][0.75]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>amount_spent</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12347</th>\n",
+       "      <td>4310.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12348</th>\n",
+       "      <td>1797.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12349</th>\n",
+       "      <td>1757.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12352</th>\n",
+       "      <td>2506.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12356</th>\n",
+       "      <td>2811.43</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            amount_spent\n",
+       "CustomerID              \n",
+       "12347            4310.00\n",
+       "12348            1797.24\n",
+       "12349            1757.55\n",
+       "12352            2506.04\n",
+       "12356            2811.43"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vip_customers = spenses[(spenses['amount_spent']>spenses.quantile([.75,.95])['amount_spent'][0.75])\n",
+    "                                        &(spenses['amount_spent']<spenses.quantile([.75,.95])['amount_spent'][0.95])]\n",
+    "\n",
+    "vip_customers.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>amount_spent</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12346</th>\n",
+       "      <td>77183.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12357</th>\n",
+       "      <td>6207.67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12359</th>\n",
+       "      <td>6372.58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12409</th>\n",
+       "      <td>11072.67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12415</th>\n",
+       "      <td>124914.53</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            amount_spent\n",
+       "CustomerID              \n",
+       "12346           77183.60\n",
+       "12357            6207.67\n",
+       "12359            6372.58\n",
+       "12409           11072.67\n",
+       "12415          124914.53"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "VIP = spenses[spenses['amount_spent']>spenses.quantile(.95)['amount_spent']]\n",
+    "VIP.head()"
    ]
   },
   {
@@ -260,12 +508,105 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "United Kingdom     177\n",
+       "Germany             10\n",
+       "France               9\n",
+       "Switzerland          3\n",
+       "Japan                2\n",
+       "EIRE                 2\n",
+       "Australia            2\n",
+       "Portugal             2\n",
+       "Spain                2\n",
+       "Denmark              1\n",
+       "Cyprus               1\n",
+       "Netherlands          1\n",
+       "Finland              1\n",
+       "Norway               1\n",
+       "Singapore            1\n",
+       "Channel Islands      1\n",
+       "Sweden               1\n",
+       "Name: Country, dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# your code here\n",
+    "custom_countries = orders[['CustomerID','Country']].groupby('CustomerID').first()\n",
+    "custom_countries = custom_countries.reset_index()\n",
+    "VIP = VIP.reset_index()\n",
+    "VIPs = custom_countries[custom_countries['CustomerID'].isin(VIP['CustomerID'])]\n",
+    "VIPs['Country'].value_counts()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "United Kingdom     932\n",
+       "Germany             39\n",
+       "France              29\n",
+       "Belgium             11\n",
+       "Switzerland          9\n",
+       "Portugal             7\n",
+       "Norway               7\n",
+       "Spain                7\n",
+       "Italy                5\n",
+       "Finland              5\n",
+       "Channel Islands      4\n",
+       "Japan                4\n",
+       "Australia            4\n",
+       "Cyprus               3\n",
+       "Denmark              3\n",
+       "EIRE                 3\n",
+       "Israel               2\n",
+       "Sweden               2\n",
+       "Malta                1\n",
+       "Singapore            1\n",
+       "Iceland              1\n",
+       "Poland               1\n",
+       "Canada               1\n",
+       "Austria              1\n",
+       "Greece               1\n",
+       "Lebanon              1\n",
+       "Netherlands          1\n",
+       "Name: Country, dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "custom_countries\n",
+    "\n",
+    "pref_vips = spenses[spenses['amount_spent']>spenses.quantile(.75)['amount_spent']]\n",
+    "pref_vips = pref_vips.reset_index()\n",
+    "\n",
+    "vp_counts = custom_countries[custom_countries['CustomerID'].isin(pref_vips['CustomerID'])]\n",
+    "vp_counts['Country'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# your code here"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -284,7 +625,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
