Por fin, despues de mil años, nos quedó el tercer challenge, saludos

--- a/your-code/challenge-3.ipynb
+++ b/your-code/challenge-3.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        "4       3.39       17850  United Kingdom         20.34  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,11 +238,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5774.277999999997"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# your code here\n",
+    "noventaycinco = orders.groupby(['Country','CustomerID'])['amount_spent'].sum().quantile(.95)\n",
+    "\n",
+    "setentaycinco = orders.groupby(['Country','CustomerID'])['amount_spent'].sum().quantile(.75)\n",
+    "noventaycinco\n",
+    "#setentaycinco"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "VIPS = orders.groupby(['Country','CustomerID'], as_index=False)['amount_spent'].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "VIP=VIPS[VIPS.amount_spent >= noventaycinco]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Preff= VIPS[(VIPS.amount_spent < noventaycinco) & (VIPS.amount_spent >= setentaycinco)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "United Kingdom     178\n",
+       "Germany             11\n",
+       "France               9\n",
+       "Switzerland          3\n",
+       "EIRE                 2\n",
+       "Spain                2\n",
+       "Portugal             2\n",
+       "Japan                2\n",
+       "Norway               1\n",
+       "Finland              1\n",
+       "Netherlands          1\n",
+       "Singapore            1\n",
+       "Sweden               1\n",
+       "Channel Islands      1\n",
+       "Cyprus               1\n",
+       "Australia            1\n",
+       "Denmark              1\n",
+       "Name: Country, dtype: int64"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Q2 = VIP.Country.value_counts()\n",
+    "Q2"
    ]
   },
   {
@@ -260,12 +341,111 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "United Kingdom     756\n",
+       "Germany             28\n",
+       "France              20\n",
+       "Belgium             11\n",
+       "Norway               6\n",
+       "Switzerland          6\n",
+       "Spain                5\n",
+       "Italy                5\n",
+       "Portugal             5\n",
+       "Finland              4\n",
+       "Australia            3\n",
+       "Channel Islands      3\n",
+       "Israel               2\n",
+       "Japan                2\n",
+       "Denmark              2\n",
+       "Cyprus               2\n",
+       "Malta                1\n",
+       "Poland               1\n",
+       "Lebanon              1\n",
+       "Greece               1\n",
+       "EIRE                 1\n",
+       "Iceland              1\n",
+       "Canada               1\n",
+       "Sweden               1\n",
+       "Austria              1\n",
+       "Name: Country, dtype: int64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# your code here\n",
+    "Q3 = Preff.Country.value_counts()\n",
+    "Q3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Australia            4.0\n",
+       "Austria              NaN\n",
+       "Belgium              NaN\n",
+       "Canada               NaN\n",
+       "Channel Islands      4.0\n",
+       "Cyprus               3.0\n",
+       "Denmark              3.0\n",
+       "EIRE                 3.0\n",
+       "Finland              5.0\n",
+       "France              29.0\n",
+       "Germany             39.0\n",
+       "Greece               NaN\n",
+       "Iceland              NaN\n",
+       "Israel               NaN\n",
+       "Italy                NaN\n",
+       "Japan                4.0\n",
+       "Lebanon              NaN\n",
+       "Malta                NaN\n",
+       "Netherlands          NaN\n",
+       "Norway               7.0\n",
+       "Poland               NaN\n",
+       "Portugal             7.0\n",
+       "Singapore            NaN\n",
+       "Spain                7.0\n",
+       "Sweden               2.0\n",
+       "Switzerland          9.0\n",
+       "United Kingdom     934.0\n",
+       "Name: Country, dtype: float64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Q2+Q3"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# your code here"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -284,7 +464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
