Challenge 1 terminado challegnge 2 al 80% challenge 3 por iniciar

--- a/your-code/challenge-3.ipynb
+++ b/your-code/challenge-3.ipynb
@@ -31,8 +31,8 @@
    "outputs": [],
    "source": [
     "# import required libraries\n",
-    "import numpy as np\n",
-    "import pandas as pd"
+    "import numpy\n",
+    "import pandas"
    ]
   },
   {
@@ -86,7 +86,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>536365</td>\n",
        "      <td>85123A</td>\n",
@@ -103,7 +103,7 @@
        "      <td>15.30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>536365</td>\n",
        "      <td>71053</td>\n",
@@ -120,7 +120,7 @@
        "      <td>20.34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>536365</td>\n",
        "      <td>84406B</td>\n",
@@ -137,7 +137,7 @@
        "      <td>22.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>536365</td>\n",
        "      <td>84029G</td>\n",
@@ -154,7 +154,7 @@
        "      <td>20.34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>536365</td>\n",
        "      <td>84029E</td>\n",
@@ -204,7 +204,7 @@
    ],
    "source": [
     "# enter your code here\n",
-    "orders = pd.read_csv(\"../../lab-subsetting-and-descriptive-stats/your-code/Orders.csv\")\n",
+    "orders = pandas.read_csv(\"../../lab-subsetting-and-descriptive-stats/your-code/Orders.csv\")\n",
     "orders.head()"
    ]
   },
@@ -225,8 +225,33 @@
    "source": [
     "We break down the main problem into several sub problems:\n",
     "\n",
-    "#### Sub Problem 1: How to aggregate the  `amount_spent` for unique customers?\n",
-    "\n",
+    "#### Sub Problem 1: How to aggregate the  `amount_spent` for unique customers?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([17850, 13047, 12583, ..., 13298, 14569, 12713], dtype=int64)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "orders.CustomerID.unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Sub Problem 2: How to select customers whose aggregated `amount_spent` is in a given quantile range?\n",
     "\n",
     "#### Sub Problem 3: How to label selected customers as \"VIP\" or \"Preferred\"?\n",
@@ -284,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
